test/bluejay/ill-typed/continuation_bind_usage.caprice
(* TEST
  include refutable;
*)

(* Continuation monad -- improper use of bind *)

let t : type -> type -> type = fun a r -> { continuation : (a -> r) -> r }

let bind (type a' b' r') (ar_r : t a' r') : (a' -> t b' r') -> t b' r' = 
  fun a_br_r ->
    { continuation = 
      fun br -> ar_r.continuation (fun a -> (a_br_r a).continuation br)
    }

let r = { r : int }

let x =
  { continuation =
    fun ir ->
      { r = (ir 0).r + 1 } }

let f =
  fun i ->
    { continuation =
      fun lir ->
        lir [ i ]
    }

let y = bind int (list int) r x f

(* I claim that the reason below is violation of the type instantiation of a polymorphic type; so this is a polymorphic type error *)
let z = y.continuation (fun ls ->
  match ls with
  | [] -> { b = 0 } (* ERROR: should have label `r` instead of `b` in order to have correct type for `y.continuation` *)
  | hd :: _ -> { b = hd } (* ERROR: should have label `r` instead of `b` in order to have correct type for `y.continuation` *)
  end
)
